<resources>
    <string name="app_name">Moo-d</string>

    <string name="user_aggregate_message">Let\'s look back at your week as a whole\nHint: try inputting \"exercise\" or \"fun\"!</string>
    <string name="first_aggregation_message">Most of your days were: %1$s</string>
    <string name="second_aggregation_message">This week\'s vibes are: %1$d</string>
    <string name="third_aggregation_message">Exercise Level: %1$d</string>
    <string name="fourth_aggregation_message">Social Level: %1$d</string>
    <string name="user_aggregation_label">Your Week</string>
    <string name="create_new_entry">Create new entry</string>
    <string name="action_notify_short">Remind me in 5 seconds</string>
    <string name="action_notify_tomorrow">Remind me tomorrow</string>
    <string name="channel_description" translatable="false">moo-d_reminder</string>
    <string name="channel_name" translatable="false">moo-d_channel</string>

    <string name="detail_date_header">Your Mood On: %1$s</string>
    <string name="aggregate">Aggregate</string>
    <string name="add_mood">Add Mood</string>
    <string name="reflection_header">Today\'s Reflection</string>
    <string name="reflection_prompt">Welcome Back! \n\n Let\'s take a moment to think about today</string>
    <string name="rate_day_prompt">How would you rate your day 1-5?</string>
    <string name="mood_input_prompt">How would you describe your mood today?</string>
    <string name="average_2">not the worst, could be better</string>
    <string name="average_3">so and so</string>
    <string name="average_4">feeling well</string>
    <string name="average_5">never been better</string>
    <string name="average_1">a bit of a struggle</string>
    <string name="submit">submit</string>
</resources>