<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#BEEDFF">

            <TextView
                android:id="@+id/header"
                style="@style/TextAppearance.AppCompat.Display1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:background="#155872"
                android:text="@string/reflection_header"
                android:textAlignment="center"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/header_image_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/reflection_prompt"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#424242"
                app:layout_constraintTop_toBottomOf="@id/header"
                tools:layout_editor_absoluteX="16dp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_q1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                app:cardCornerRadius="32dp"
                app:layout_constraintTop_toBottomOf="@id/header_image_textview">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/text_q1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:text="@string/rate_day_prompt" />

                    <RadioGroup
                        android:id="@+id/q1_ratings"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="16dp"
                        android:checkedButton="@id/option_rating_3"
                        android:orientation="horizontal"
                        app:layout_constraintTop_toBottomOf="@id/text_q1">

                        <RadioButton
                            android:id="@+id/option_rating_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="1" />

                        <RadioButton
                            android:id="@+id/option_rating_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="2" />

                        <RadioButton
                            android:id="@+id/option_rating_3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="3" />

                        <RadioButton
                            android:id="@+id/option_rating_4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="4" />

                        <RadioButton
                            android:id="@+id/option_rating_5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="5" />
                    </RadioGroup>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_q2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                app:cardCornerRadius="32dp"
                app:layout_constraintTop_toBottomOf="@id/card_view_q1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/text_q2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:text="@string/mood_input_prompt" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textfield_mood"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        app:layout_constraintTop_toBottomOf="@id/card_view_q2">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/textfield_input_mood"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textCapWords" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <Button
                android:id="@+id/button_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:text="@string/submit"
                app:layout_constraintEnd_toEndOf="@id/card_view_q2"
                app:layout_constraintStart_toStartOf="@id/card_view_q2"
                app:layout_constraintTop_toBottomOf="@id/card_view_q2"></Button>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>